# Cpp-Solar-System-Simulator

./: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  Icons.qrc  README.md  basicmode.cpp  basicmode.h  basicmode.ui  main.cpp  planet.cpp  planet.h  planet_config.csv  realmode.cpp  realmode.h  realmode.ui  solarsystem.cpp  solarsystem.h  solarviswindow.cpp  solarviswindow.h  solarviswindow.ui  sun.cpp  sun.h  utils.cpp  utils.h
Pics/: Author screen.afdesign  Basic mode a few moments later.afdesign  Basic mode customizing.afdesign  Basic mode default.afdesign  Menu.afdesign  Real mode example.afdesign  Real mode.afdesign  Thank you.afdesign
